# aiopsinsights

./: .gitignore  404.html  CNAME  dev.sh  index.html  mkdocs.yml  mkdocs.yml.new  requirements.txt  sitemap.xml  update_nav.py
.github/workflows/: deploy.yml
ai-engineering/: index.html
ai-papers/: index.html
ai-research/: index.html
css/: extra.css
docs/: index.md
docs/ai-engineering/: github-pages-custom-domain.md  index.md
docs/ai-engineering/llmops-healthcare-triage/: part1-problem-space.md
docs/ai-papers/: index.md
docs/ai-research/: index.md
docs/end-to-end-eng/: data-quality.md  etl-pipelines.md  experiment-tracking.md  feature-engineering.md  getting-started.md  hyperparameter-optimization.md  index.md  mlops.md  model-serving.md  model-training.md  monitoring.md
docs/end-to-end-eng/ai-engineering/: index.md
docs/end-to-end-eng/ai-engineering/llmops-healthcare-triage/: part1-problem-space.md  part2-bronze-ingestion.md  part2-data-profiling.md  part3-bronze-ingestion.md  part4-silver-layer.md  part5-gold-layer.md  part6-vector-search.md  part7-llm-rag.md  part8-monitoring-scaling.md
docs/end-to-end-eng/batch-processing/: index.md
docs/end-to-end-eng/case-studies/: recommendation-system.md
docs/end-to-end-eng/data-ingestion/: data-validation.md  index.md  stream-processing.md
docs/finops/: index.md  principles.md
docs/js/: extra.js
docs/overrides/: main.html
docs/tool-finops/: aws-cost-optimization.md  azure-cost-control.md  datadog-vs-newrelic.md  gcp-cost-management.md  index.md  k8s-cost-management.md  serverless-costs.md
end-to-end-eng/: index.html
finops/: index.html
overrides/: main.html
overrides/assets/stylesheets/: extra.css
search/: search_index.json
src/bronze_ingest/: pyproject.toml  requirements.txt
src/bronze_ingest/bronze_ingest/: models.py  pii.py  pipeline.py
src/bronze_ingest/tests/: test_pii.py
tool-finops/: index.html
